styling change for readable output

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,11 @@ body {
     padding: 0;
 }
 
-.dropdown,
-.result {
+.dropdown {
     margin: 10px;
+}
+
+.result {
+    margin-top: 140px;
+    margin-left: 10px;
 }
